--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,16 @@
             min-height: 100vh;
             padding: 20px;
         }
+        .a4-page {
+            width: 297mm;
+            height: 210mm;
+            background-color: white;
+        }
     </style>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+        <div class="a4-page"></div>
+    </div>
 </body>
 </html>
