--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="root">
         <div class="page">
-            <div class="content">hello</div>
+            <div class="content"></div>
         </div>
     </div>
 </body>
